Extend the width of redesigned Swaps in the expanded-view mode

--- a/ui/pages/swaps/index.scss
+++ b/ui/pages/swaps/index.scss
@@ -79,6 +79,12 @@
     @include screen-sm-min {
       width: 348px;
     }
+
+    &--redesign-enabled {
+      @include screen-sm-min {
+        width: 100%;
+      }
+    }
   }
 
   &__title {
